--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 pandas==1.5.3
 streamlit==1.19.0
 torch==1.13.1
-torchvision==0.14.1
+
 pillow==9.4.0
 wget==3.2
+torch==1.10.1
+torchvision==0.10.0
+numpy==1.21.5
+pandas==1.3.5
